--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,17 +1,42 @@
-name: GitHub Actions Demo
-on: [push]
+name: GitHub CI
+
+# Triggers
+on:
+  push:
+      branches:
+        - main
+
+  # Allows workflow runs manually from the Actions tab
+  workflow_dispatch:
+      
+
 jobs:
-  Explore-GitHub-Actions:
+  Code-Actions:
+    name: Checkout code
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
+      - run: echo "Event '${{ github.event_name }}' on branch '${{ github.ref }}' started this action."
+      - name: Code checkout
         uses: actions/checkout@v2
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+        with:
+          fetch-depth: 0          # Fetches all changes
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+      - run: echo "Job status '${{ job.status }}'."
+
+  Python-Build-Actions:
+    name: Checks Python build success
+    runs-on: ubuntu-latest
+    steps:
+      - name: Code checkout
+        uses: actions/checkout@v2
+      - name: Python setup
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
+          cache: 'pip'
+      - name: Pip env build
+        timeout-minutes: 2
+        run: pip install -r requirements.
+      - run: echo "Job status '${{ job.status }}'."
