--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -38,5 +38,5 @@ jobs:
           cache: 'pip'
       - name: Pip env build
         timeout-minutes: 2
-        run: pip install -r requirements.
+        run: pip install -r requirements.txt
       - run: echo "Job status '${{ job.status }}'."
