--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -26,7 +26,7 @@ jobs:
       - run: echo "Job status '${{ job.status }}'."
   release:
     name: Heroku deployment
-    needs: build
+    #needs: build               # Disabled: faster builds & less waiting time
     runs-on: ubuntu-latest
     steps:
       - name: Code checkout
@@ -39,5 +39,5 @@ jobs:
           heroku_email: ${{secrets.HEROKU_EMAIL}}
           healthcheck: "https://${{secrets.HEROKU_APP_NAME}}.herokuapp.com/health"
           checkstring: "ok"
-          delay: 5
+          delay: 10
           rollbackonhealthcheckfailed: false
