--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -23,6 +23,14 @@ jobs:
       - name: Pip env build
         timeout-minutes: 2
         run: pip install -r requirements.txt
+      - name: Boots Docker image builder
+        uses: docker/setup-buildx-action@v1
+        id: buildx
+        with:
+          install: true
+      - name: Builds Docker image
+        run: |
+          docker build . # will run buildx
       - run: echo "Job status '${{ job.status }}'."
   release:
     name: Heroku deployment
@@ -38,6 +46,7 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
           heroku_email: ${{secrets.HEROKU_EMAIL}}
+          usedocker: true
           # Disabled: faster builds ignore health
           # TODO: Enable on prod
           #healthcheck: "https://${{secrets.HEROKU_APP_NAME}}.herokuapp.com/health"
