--- a/source/Dockerfile
+++ b/source/Dockerfile
@@ -13,5 +13,5 @@ EXPOSE 5000
 #RUN useradd -m heroku
 #USER heroku
 
-CMD ["uvicorn", "--host", "0.0.0.0", "--port", "5000", "source.main:app"]
+CMD ["uvicorn", "--host", "0.0.0.0", "--port", "5000", "main:app"]
 #ENTRYPOINT ["uvicorn --host=0.0.0.0 --port=5000 source.main:app"]
