Changed Docker image from alpine to slim.

--- a/source/Dockerfile
+++ b/source/Dockerfile
@@ -1,7 +1,9 @@
-FROM python:3.9-alpine
+FROM python:3.9-slim
 LABEL maintainer="github.com/lkananen"
 
 # Dependecies
+RUN apt-get update && apt-get install -y python3-dev build-essential
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir --upgrade -r requirements.txt
 
