--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -22,7 +22,7 @@ jobs:
           cache: 'pip'
       - name: Pip env build
         timeout-minutes: 2
-        run: pip install -r requirements.txt
+        run: pip install -r source/requirements.txt
       - name: Boots Docker image builder
         uses: docker/setup-buildx-action@v1
         id: buildx
@@ -30,7 +30,7 @@ jobs:
           install: true
       - name: Builds Docker image
         run: |
-          docker build . # will run buildx
+          docker build ./source/Dockerfile  # will run buildx
       - run: echo "Job status '${{ job.status }}'."
   release:
     name: Heroku deployment
@@ -43,10 +43,11 @@ jobs:
       - name: Heroku push
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
+          appdir: source
+          usedocker: true
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
           heroku_email: ${{secrets.HEROKU_EMAIL}}
-          usedocker: true
           # Disabled: faster builds ignore health
           # TODO: Enable on prod
           #healthcheck: "https://${{secrets.HEROKU_APP_NAME}}.herokuapp.com/health"
