--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -45,6 +45,7 @@ jobs:
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           appdir: source
+          stack: "container"
           usedocker: true
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
