Included QR_MSG to env

--- a/source/app/.env-example
+++ b/source/app/.env-example
@@ -1,1 +1,2 @@
 SEATS="[{"id":12345,"table":2,"side":1,"place":5,"name":"John"},{"id":56789,"table":12,"side":3,"place":5,"name":"Jane"}]"
+QR_MSG="https://my-awesome-app.herokuapp.com/"
