Moved root to separate template.

--- a/source/app/.env-example
+++ b/source/app/.env-example
@@ -1,2 +1,6 @@
 SEATS="[{"id":12345,"table":2,"side":1,"place":5,"name":"John"},{"id":56789,"table":12,"side":3,"place":5,"name":"Jane"}]"
 QR_MSG="https://my-awesome-app.herokuapp.com/"
+SITE_MAIN="https://my-awesome-app.herokuapp.com/"
+SITE_SEATS="https://my-awesome-app.herokuapp.com/seatmap"
+SITE_PROGRAM="https://my-awesome-app.herokuapp.com/program"
+SITE_QR="https://my-awesome-app.herokuapp.com/qr"
